# astral-bot

./: Cargo.toml
.github/workflows/: ci.yml
src/: main.rs
